# kaipy

./: .gitignore  .readthedocs.yaml  LICENSE.md  Private2PublicSteps.md  README.md  kaiH5.py  kaiTools.py  kaiViz.py  kaijson.py  kdefs.py  lfm2kaiju.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: requirements.txt  rtd-buildnotes.txt
docs/source/: cdaweb_utils.rst  chimp.rst  conf.py  embiggenUtils.rst  gamera.rst  gamhelio.wsa2gamera.rst  index.rst  intro.rst  kaiH5.rst  kaiTools.rst  kaiViz.rst  kaipy.chimp.rst  kaipy.gamera.rst  kaipy.gamhelio.lib.rst  kaipy.gamhelio.rst  kaipy.gamhelio.wsa2TDgamera.rst  kaipy.gamhelio.wsa2gamera.rst  kaipy.paraview.rst  kaipy.raiju.rst  kaipy.rcm.lambdautils.rst  kaipy.rcm.rst  kaipy.rcm.wmutils.rst  kaipy.remix.rst  kaipy.rst  kaipy.satcomp.rst  kaipy.solarWind.rst  kdefs.rst  modules.rst  package.rst  paraview.rst  remix.rst  scripts.rst  solarWind.rst  supermag_api.rst
docs/source/_static/css/: sidebar_theme.css
docs/source/kaipy/: developers.rst  installation.rst  requirements.rst  usage.rst
kaipy/: cdaweb_utils.py  kaiH5.py  kaiTools.py  kaiViz.py  kaijson.py  kaixdmf.py  lfm2kaiju.py  supermage.py  transform.py
kaipy/chimp/: chimph5p.py  kCyl.py
kaipy/cmaps/: kaimaps.py
kaipy/gamera/: gamGrids.py  gampp.py  magsphere.py  msphViz.py  rcmpp.py  remixpp.py
kaipy/gamhelio/: helioViz.py
kaipy/gamhelio/ConfigScripts/: startup.json
kaipy/raiju/: dst.py  m2m.py  raijuUtils.py  raijuViz.py
kaipy/raiju/waveModel/: genWM.py
kaipy/rcm/: rcminit.py  rcmutils.py  rcmxdmf.py
kaipy/rcm/lambdautils/: DistTypes.py  fileIO.py  genAlam.py  plotter.py
kaipy/rcm/wmutils/: genWM.py
kaipy/remix/: remix.py
kaipy/satcomp/: scRCM.py  scutils.py
kaipy/scripts/: setupEnvironment.csh  setupEnvironment.sh
kaipy/scripts/OHelio/: ih2oh.py
kaipy/scripts/datamodel/: helioSatComp.py  msphParallelSatComp.py  msphPbsSatComp.py  msphSatComp.py  rbspSCcomp.py  rcm_rbsp_satcomp.py
kaipy/scripts/postproc/: block_genmpiXDMF.py  calcdb-template.pbs  calcdb-template.xml  create_supermag_comparison_plots.py  dbpole.py  embiggen.py  embiggenMIX.py  embiggenRCM.py  embiggenVOLT.py  genXDMF.py  genXLine.py  genmpiXDMF.py  numSteps.py  pitmerge-template.pbs  pitmerge.py  printResTimes.py  run_calcdb.py  run_ground_deltaB_analysis.py  run_supermag_comparison.py  slimFL.py  slimh5.py  slimh5_classic.py  supermag_comparison-orig.py  supermag_comparison-template.pbs  supermag_comparison.py  supermage_analysis.py  ut2mjd.py
kaipy/scripts/postproc/templates/: calcdb-template-derecho.pbs  calcdb-template-pleiades.pbs  calcdb-template.pbs  calcdb-template.xml  ground_deltaB_analysis-template.pbs  ground_deltab_analysis-template-derecho.pbs  ground_deltab_analysis-template-pleiades.pbs  ground_deltab_analysis-template.pbs  pitmerge-template-derecho.pbs  pitmerge-template-pleiades.pbs  pitmerge-template.pbs  supermag_comparison-template.pbs
kaipy/scripts/preproc/: XMLGenerator.py  cda2wind.py  genLFM.py  genRAIJU.py  genRCM.py  wsa2TDgamera.py  wsa2gamera.py
kaipy/scripts/quicklook/: dbVid.py  dbpic.py  dstpic.py  gamerrVid.py  gamerrpic.py  gamsphVid.py  heliomovie.py  heliopic.py  mixpic.py  msphpic.py  raijupic.py  rcmDataProbe.py  rcmPrecipSpecFlux.py  rcmSpecFlux.py  rcmpic.py  swpic.py  vizTrj.py
kaipy/solarWind/: CUSTOM.py  OMNI.py  SWPC.py  SolarWind.py  WIND.py  swBCplots.py
tests/: conftest.py  notebookfortest.ipynb  notesfortests.md  test_kaiH5.py  test_kaijson.py  test_transform.py
tests/gamera/: test_gamGrids.py  test_gampp.py
tests/rcm/lambdautils/: test_AlamData.py  test_AlamParams.py  test_fileIO.py  test_genAlam.py
tests/rcm/wmutils/: test_genWM.py  test_wmData.py
