[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "kaipy"
version = "1.0.6"
authors = [
    {name = "Eric Winter", email = "eric.winter@jhuapl.edu"},
]
description = "Python software for CGS MAGE and other Kaiu models"
readme = "README.md"
requires-python = ">=3.8,<=3.10"
keywords = ["CGS", "MAGE", "KAIJU"]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "alive_progress",
    "astropy",
    "cdasws",
    "configparser",
    "h5py",
    "matplotlib",
    "pandas",
    "progressbar",
    "pyhdf",
    "pyspedas",
    "pytest",
    "spacepy",
    "sunpy",
]

[project.scripts]
cda2wind = "kaipy.scripts.preproc.cda2wind:main"
genLFM = "kaipy.scripts.preproc.genLFM:main"
genRCM = "kaipy.scripts.preproc.genRCM:main"
XMLGenerator = "kaipy.scripts.preproc.XMLGenerator:main"