[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[project]
name = "kaipy"
version = "1.0.8"
authors = [
    {name = "Eric Winter", email = "eric.winter@jhuapl.edu"},
]
description = "Python software for CGS MAGE and other Kaiju models"
readme = "README.md"
requires-python = ">=3.8,<=3.12"
keywords = ["CGS", "MAGE", "KAIJU"]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "alive_progress",
    "astropy",
    "cdasws",
    "configparser",
    "h5py",
    "matplotlib",
    "pandas",
    "progressbar",
    "pyspedas",
    "pytest",
    "spacepy",
    "sunpy",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.scripts]
ih2oh                     = "kaipy.scripts.OHelio.ih2oh:main"
helioSatComp              = "kaipy.scripts.datamodel.helioSatComp:main"
msphParallelSatComp       = "kaipy.scripts.datamodel.msphParallelSatComp:main"
msphPbsSatComp            = "kaipy.scripts.datamodel.msphPbsSatComp:main"
msphSatComp               = "kaipy.scripts.datamodel.msphSatComp:main"
rbspSCcomp                = "kaipy.scripts.datamodel.rbspSCcomp:main"
rcm_rbsp_satcomp          = "kaipy.scripts.datamodel.rcm_rbsp_satcomp:main"

block_genmpiXDMF          = "kaipy.scripts.postproc.block_genmpiXDMF:main"
embiggen                  = "kaipy.scripts.postproc.embiggen:main"
embiggenMIX               = "kaipy.scripts.postproc.embiggenMIX:main"
embiggenRCM               = "kaipy.scripts.postproc.embiggenRCM:main"
embiggenVOLT              = "kaipy.scripts.postproc.embiggenVOLT:main"
genmpiXDMF                = "kaipy.scripts.postproc.genmpiXDMF:main"
genXDMF                   = "kaipy.scripts.postproc.genXDMF:main"
genXLine                  = "kaipy.scripts.postproc.genXLine:main"
numSteps                  = "kaipy.scripts.postproc.numSteps:main"
pitmerge                  = "kaipy.scripts.postproc.pitmerge:main"
printResTimes             = "kaipy.scripts.postproc.printResTimes:main"
run_calcdb                = "kaipy.scripts.postproc.run_calcdb:main"
run_ground_deltaB_analysis= "kaipy.scripts.postproc.run_ground_deltaB_analysis:main"
slimFL                    = "kaipy.scripts.postproc.slimFL:main"
slimh5                    = "kaipy.scripts.postproc.slimh5:main"
slimh5_classic            = "kaipy.scripts.postproc.slimh5_classic:main"
supermag_comparison       = "kaipy.scripts.postproc.supermag_comparison:main"
supermag_analysis         = "kaipy.scripts.postproc.supermag_analysis:main"
ut2mjd                    = "kaipy.scripts.postproc.ut2mjd:main"

cda2wind                  = "kaipy.scripts.preproc.cda2wind:main"
genLFM                    = "kaipy.scripts.preproc.genLFM:main"
genRCM                    = "kaipy.scripts.preproc.genRCM:main"
wsa2gamera                = "kaipy.scripts.preproc.wsa2gamera:main"
wsa2TDgamera              = "kaipy.scripts.preproc.wsa2TDgamera:main"
XMLGenerator              = "kaipy.scripts.preproc.XMLGenerator:main"

dbVid                     = "kaipy.scripts.quicklook.dbVid:main"
dbpic                     = "kaipy.scripts.quicklook.dbpic:main"
dstpic                    = "kaipy.scripts.quicklook.dstpic:main"
gamerrVid                 = "kaipy.scripts.quicklook.gamerrVid:main"
gamerrpic                 = "kaipy.scripts.quicklook.gamerrpic:main"
gamsphVid                 = "kaipy.scripts.quicklook.gamsphVid:main"
heliomovie                = "kaipy.scripts.quicklook.heliomovie:main"
heliopic                  = "kaipy.scripts.quicklook.heliopic:main"
mixpic                    = "kaipy.scripts.quicklook.mixpic:main"
msphpic                   = "kaipy.scripts.quicklook.msphpic:main"
rcmDataProbe              = "kaipy.scripts.quicklook.rcmDataProbe:main"
rcmpic                    = "kaipy.scripts.quicklook.rcmpic:main"
remixTimeSeries           = "kaipy.scripts.quicklook.remixTimeSeries:main"
swpic                     = "kaipy.scripts.quicklook.swpic:main"
vizTrj                    = "kaipy.scripts.quicklook.vizTrj:main"

OMNI                      = "kaipy.solarWind.OMNI:main"
SWPC                      = "kaipy.solarWind.SWPC:main"
TimeSeries                = "kaipy.solarWind.TimeSeries:main"
WIND                      = "kaipy.solarWind.WIND:main"
ols                       = "kaipy.solarWind.ols:main"